build: upgrade Spring Boot version 2.5.6