@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.2.RELEASE</version>
+        <version>2.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.seariver</groupId>
@@ -15,8 +15,8 @@
     <description>Kanban Board</description>
 
     <properties>
-        <java.version>14</java.version>
-        <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
+        <java.version>17</java.version>
+        <spring-cloud.version>2020.0.4</spring-cloud.version>
         <commons-dbcp2.version>2.7.0</commons-dbcp2.version>
         <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
@@ -146,10 +146,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <arguments>--enable-preview</arguments>
-                    <jvmArguments>--enable-preview</jvmArguments>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -158,7 +154,6 @@
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                     <release>${java.version}</release>
                 </configuration>
             </plugin>
@@ -168,7 +163,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skipTests>true</skipTests>
-                    <argLine>@{argLine} --enable-preview</argLine>
                 </configuration>
                 <executions>
                     <execution>
